--- a/index.html
+++ b/index.html
@@ -2,11 +2,146 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
+    <title>Седона</title>
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">Продвинутый HTML и CSS</a>».</p>
-
+    <header class="page-header">
+      <a class="page-header__logo">
+        <img class="page-header__logo-image" src="http://placehold.it/150x100" width="150" height="100" alt="Седона">
+      </a>
+      <nav class="main-nav">
+        <button class="main-nav__toggle" type="button">Открыть меню</button>
+        <button class="main-nav__button-close" type="button">Закрыть меню</button>
+        <ul class="main-nav__list site-list">
+          <li class="site-list__item site-list__item--active">
+            <a>Главная</a>
+          </li>
+          <li class="site-list__item">
+            <a href="photo.html">Фото и видео</a>
+          </li>
+          <li class="site-list__item">
+            <a href="form.html">Форма отзыва</a>
+          </li>
+          <li class="site-list__item">
+            <a href="#">HTML Academy</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main class="page-main">
+      <section class="intro">
+        <h1 class="visually-hidden">Добро пожаловать в Седону!</h1>
+        <img class="intro__title" src="http://placehold.it/150x100" width="150" height="100" alt="Добро пожаловать в Седону!">
+        <b class="intro__slogan">
+          Седона - небольшой городок в Аризоне, заслуживающий большего!
+        </b>
+      </section>
+      <section class="reasons">
+        <h2 class="reasons__header">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</h2>
+        <div class="reasons__item reasons__item--real-city">
+          <h3 clss="reasons__title">Настоящий городок</h3>
+          <p class="reasons__description">
+            &mdash; №1 &mdash;
+          </p>
+          <p class="reasons__description">
+            Седона не аттракцион для туристов, там течет своя жизнь
+          </p>
+        </div>
+        <div class="reasons__item reasons__item--bridge">
+          <h3 clss="reasons__title">Там есть мост дьявола</h3>
+          <p class="reasons__description">
+            &mdash; №2 &mdash;
+          </p>
+          <p class="reasons__description">
+            Да, по нему можно пройти! Если вы осмелитесь, конечно
+          </p>
+        </div>
+      </section>
+      <section class="recommendations">
+        <h2 class="visually-hidden">Рекомендации</h2>
+        <ul class="recommendations__list">
+          <li class="recommendations__item">
+            <h3 class="recommendations__title">Жилье</h3>
+            <p class="recommendations__description">
+              Рекомендуем пожить в настоящем мотеле, все как в кино!
+            </p>
+          </li>
+          <li class="recommendations__item">
+            <h3 class="recommendations__title">Сувениры</h3>
+            <p class="recommendations__description">
+              Не только китайского, но и местного производства!
+            </p>
+          </li>
+          <li class="recommendations__item">
+            <h3 class="recommendations__title">Еда</h3>
+            <p class="recommendations__description">
+              Всегда заказывайте фирменный бургер, вы не разочаруетесь!
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section class="reasons">
+        <div class="reasons__item">
+          <h3 clss="reasons__title">Небольшая площадь</h3>
+          <p class="reasons__description">
+            &mdash; №3 &mdash;
+          </p>
+          <p class="reasons__description">
+            Все интересные места находятся очень близко
+          </p>
+        </div>
+        <div class="reasons__item">
+          <h3 clss="reasons__title">Красивая дорога</h3>
+          <p class="reasons__description">
+            &mdash; №4 &mdash;
+          </p>
+          <p class="reasons__description">
+            Ехать в Седону из Лас-Вегаса совсем не скучно!
+          </p>
+        </div>
+        <div class="reasons__item">
+          <h3 clss="reasons__title">Мало туристов</h3>
+          <p class="reasons__description">
+            &mdash; №5 &mdash;
+          </p>
+          <p class="reasons__description">
+            Большинство едет в Гранд Каньон и толпится там
+          </p>
+        </div>
+      </section>
+      <section class="hotel-search">
+        <h2 class="hotel-search__title">Заинтересовались?</h2>
+        <p class="hotel-search__description">
+          Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне
+        </p>
+        <a class="hotel-search__button button" href="#">Найти гостиницу</a>
+        <div class="hotel-search__map">
+          <img src="http://placehold.it/150x100" width="150" height="100" alt="Карта">
+        </div>
+      </section>
+    </main>
+    <footer class="page-footer">
+      <div class="page-footer__visitsedona">
+        <a href="#">#visitsedona</a>
+      </div>
+      <div class="page-footer__social social">
+        <ul class="social__list">
+          <li class="social__item">
+            <a class="social__link social__link--twitter" href="https://vk.com/htmlacademy">Мы в Твиттере</a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--youtube" href="https://www.instagram.com/htmlacademy">Мы в Ютубе</a>
+          </li>
+        </ul>
+      </div>
+      <div class="page-footer__copyright copyright">
+        <p class="copyright__text">Разработано:</p>
+        <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+      </div>
+    </footer>
   </body>
 </html>
