--- a/form.html
+++ b/form.html
@@ -38,7 +38,7 @@
         <p class="feedback__description">
           Помогите нашим отелям стать лучше! Оставьте отзыв о них, а также о посещенных вами достопримечательностях
         </p>
-        <form class="feedback__form form" action="#" method="post">
+        <form class="feedback__form form" action="https://echo.htmlacademy.ru" method="post">
           <div class="form__item">
             <h3 class="form__title">Представьтесь:</h3>
             <label for="first-name">Имя<sup>*</sup>:</label>
@@ -55,25 +55,25 @@
             <label for="email">Электронная почта<sup>*</sup>:</label>
             <input type="email" id="email" name="email" placeholder="Введите e-mail" required>
           </div>
-          <div class="radio-button">
-            <h3 class="radio-button__title">Ваше общее впечатление:</h3>
-            <input type="radio" id="positive" name="impression" value="positive" checked>
-            <label for="positive">Скорее положительное</label>
-            <input type="radio" id="negative" name="impression" value="negative">
-            <label for="negative">Скорее отрицательное</label>
-            <input type="radio" id="indefinite" name="impression" value="indefinite">
-            <label for="indefinite">Затрудняюсь ответить</label>
+          <div class="radio">
+            <h3 class="radio__title">Ваше общее впечатление:</h3>
+            <input class="radio__input" type="radio" id="positive" name="impression" value="positive" checked>
+            <label class="radio__label" for="positive">Скорее положительное</label>
+            <input class="radio__input" type="radio" id="negative" name="impression" value="negative">
+            <label class="radio__label" for="negative">Скорее отрицательное</label>
+            <input class="radio__input" type="radio" id="indefinite" name="impression" value="indefinite">
+            <label class="radio__label" for="indefinite">Затрудняюсь ответить</label>
           </div>
           <div class="checkbox">
             <h3 class="checkbox__title">Посещенные достопримечательности:</h3>
-            <input type="checkbox" id="bridge" name="bridge" checked>
-            <label for="bridge">Мост Дьявола</label>
-            <input type="checkbox" id="park" name="park" checked>
-            <label for="park">Слайд-парк</label>
-            <input type="checkbox" id="mountain" name="mountain">
-            <label for="mountain">Гора-Колокол</label>
-            <input type="checkbox" id="cliffs" name="cliffs" checked>
-            <label for="cliffs">Красные скалы</label>
+            <input class="checkbox__input" type="checkbox" id="bridge" name="bridge" checked>
+            <label class="checkbox__label" for="bridge">Мост Дьявола</label>
+            <input class="checkbox__input" type="checkbox" id="park" name="park" checked>
+            <label class="checkbox__label" for="park">Слайд-парк</label>
+            <input class="checkbox__input" type="checkbox" id="mountain" name="mountain">
+            <label class="checkbox__label" for="mountain">Гора-Колокол</label>
+            <input class="checkbox__input" type="checkbox" id="cliffs" name="cliffs" checked>
+            <label class="checkbox__label" for="cliffs">Красные скалы</label>
           </div>
           <div class="form__item">
             <h3 class="form__title">Опишите свои эмоции:</h3>
