--- a/index.html
+++ b/index.html
@@ -4,42 +4,45 @@
     <meta charset="utf-8">
     <title>Седона</title>
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header class="page-header">
-      <a class="page-header__logo">
-        <img class="page-header__logo-image" src="http://placehold.it/150x100" width="150" height="100" alt="Седона">
-      </a>
       <nav class="page-header__nav">
-        <button class="page-header__toggle" type="button">Открыть меню</button>
         <ul class="site-list">
           <li class="site-list__item site-list__item--active">
-            <a>Главная</a>
+            <a class="site-list__link">Главная</a>
           </li>
           <li class="site-list__item">
-            <a href="photo.html">Фото и видео</a>
+            <a class="site-list__link" href="photo.html">Фото и видео</a>
           </li>
           <li class="site-list__item">
-            <a href="form.html">Форма отзыва</a>
+            <a class="site-list__link" href="form.html">Форма отзыва</a>
           </li>
           <li class="site-list__item">
-            <a href="#">HTML Academy</a>
+            <a class="site-list__link" href="#">HTML Academy</a>
           </li>
         </ul>
       </nav>
+      <div class="page-header__wrapper">
+        <button class="page-header__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+        <a class="page-header__logo">
+          <img class="page-header__logo-image" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Седона">
+        </a>
+      </div>
     </header>
     <main class="page-main">
       <section class="intro">
         <h1 class="visually-hidden">Добро пожаловать в Седону!</h1>
         <img class="intro__title" src="http://placehold.it/150x100" width="150" height="100" alt="Добро пожаловать в Седону!">
-        <b class="intro__slogan">
-          Седона - небольшой городок в Аризоне, заслуживающий большего!
-        </b>
       </section>
       <section class="reasons">
+        <b class="reasons__slogan">
+          Седона - небольшой городок в Аризоне, заслуживающий большего!
+        </b>
         <h2 class="reasons__header">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</h2>
         <div class="reasons__item reasons__item--real-city">
-          <h3 clss="reasons__title">Настоящий городок</h3>
+          <h3 class="reasons__title">Настоящий городок</h3>
           <p class="reasons__description">
             &mdash; №1 &mdash;
           </p>
@@ -71,7 +74,7 @@
           </ul>
         </section>
         <div class="reasons__item reasons__item--bridge">
-          <h3 clss="reasons__title">Там есть мост дьявола</h3>
+          <h3 class="reasons__title">Там есть мост дьявола</h3>
           <p class="reasons__description">
             &mdash; №2 &mdash;
           </p>
@@ -79,32 +82,34 @@
             Да, по нему можно пройти! Если вы осмелитесь, конечно
           </p>
         </div>
-        <div class="reasons__item">
-          <h3 clss="reasons__title">Небольшая площадь</h3>
-          <p class="reasons__description">
-            &mdash; №3 &mdash;
-          </p>
-          <p class="reasons__description">
-            Все интересные места находятся очень близко
-          </p>
-        </div>
-        <div class="reasons__item">
-          <h3 clss="reasons__title">Красивая дорога</h3>
-          <p class="reasons__description">
-            &mdash; №4 &mdash;
-          </p>
-          <p class="reasons__description">
-            Ехать в Седону из Лас-Вегаса совсем не скучно!
-          </p>
-        </div>
-        <div class="reasons__item">
-          <h3 clss="reasons__title">Мало туристов</h3>
-          <p class="reasons__description">
-            &mdash; №5 &mdash;
-          </p>
-          <p class="reasons__description">
-            Большинство едет в Гранд Каньон и толпится там
-          </p>
+        <div class="reasons__wrapper">
+          <div class="reasons__item">
+            <h3 class="reasons__title">Небольшая площадь</h3>
+            <p class="reasons__description">
+              &mdash; №3 &mdash;
+            </p>
+            <p class="reasons__description">
+              Все интересные места находятся очень близко
+            </p>
+          </div>
+          <div class="reasons__item">
+            <h3 class="reasons__title">Красивая дорога</h3>
+            <p class="reasons__description">
+              &mdash; №4 &mdash;
+            </p>
+            <p class="reasons__description">
+              Ехать в Седону из Лас-Вегаса совсем не скучно!
+            </p>
+          </div>
+          <div class="reasons__item">
+            <h3 class="reasons__title">Мало туристов</h3>
+            <p class="reasons__description">
+              &mdash; №5 &mdash;
+            </p>
+            <p class="reasons__description">
+              Большинство едет в Гранд Каньон и толпится там
+            </p>
+          </div>
         </div>
       </section>
       <section class="hotel-search">
@@ -114,13 +119,13 @@
         </p>
         <a class="hotel-search__button button" href="#">Найти гостиницу</a>
         <div class="hotel-search__map">
-          <img src="http://placehold.it/150x100" width="150" height="100" alt="Карта">
+          <img src="../img/bg-map-mobile@1x.jpg" width="320" height="350" alt="Карта">
         </div>
       </section>
     </main>
     <footer class="page-footer">
       <div class="page-footer__visitsedona">
-        <a href="#">#visitsedona</a>
+        <a class="page-footer__link" href="#">#visitsedona</a>
       </div>
       <div class="page-footer__social social">
         <ul class="social__list">
