--- a/index.html
+++ b/index.html
@@ -2,148 +2,154 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Седона</title>
-    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-    <header class="page-header">
-      <nav class="page-header__nav">
-        <ul class="site-list">
-          <li class="site-list__item site-list__item--active">
-            <a class="site-list__link">Главная</a>
-          </li>
-          <li class="site-list__item">
-            <a class="site-list__link" href="photo.html">Фото и видео</a>
-          </li>
-          <li class="site-list__item">
-            <a class="site-list__link" href="form.html">Форма отзыва</a>
-          </li>
-          <li class="site-list__item">
-            <a class="site-list__link" href="#">HTML Academy</a>
-          </li>
-        </ul>
-      </nav>
-      <div class="page-header__wrapper">
-        <button class="page-header__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-        <a class="page-header__logo">
-          <img class="page-header__logo-image" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Седона">
-        </a>
-      </div>
-    </header>
-    <main class="page-main">
-      <section class="intro">
-        <h1 class="visually-hidden">Добро пожаловать в Седону!</h1>
-        <img class="intro__title" src="http://placehold.it/150x100" width="150" height="100" alt="Добро пожаловать в Седону!">
-      </section>
-      <section class="reasons">
-        <b class="reasons__slogan">
-          Седона - небольшой городок в Аризоне, заслуживающий большего!
-        </b>
-        <h2 class="reasons__header">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</h2>
-        <div class="reasons__item reasons__item--real-city">
-          <h3 class="reasons__title">Настоящий городок</h3>
-          <p class="reasons__description">
-            &mdash; №1 &mdash;
-          </p>
-          <p class="reasons__description">
-            Седона не аттракцион для туристов, там течет своя жизнь
-          </p>
+    <div class="container">
+      <header class="page-header">
+        <nav class="page-header__nav">
+          <ul class="site-list">
+            <li class="site-list__item">
+              <a class="site-list__link site-list__link--active">Главная</a>
+            </li>
+            <li class="site-list__item">
+              <a class="site-list__link" href="photo.html">Фото и видео</a>
+            </li>
+            <li class="site-list__item">
+              <a class="site-list__link" href="form.html">Форма отзыва</a>
+            </li>
+            <li class="site-list__item">
+              <a class="site-list__link" href="#">HTML Academy</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="page-header__wrapper">
+          <button class="page-header__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+          <a class="page-header__logo">
+            <img class="page-header__logo-image" src="http://placehold.it/150x100" width="150" height="100" alt="Седона">
+          </a>
         </div>
-        <section class="recommendations">
-          <h2 class="visually-hidden">Рекомендации</h2>
-          <ul class="recommendations__list">
-            <li class="recommendations__item">
+      </header>
+      <main class="page-main">
+        <section class="intro">
+          <h1 class="visually-hidden">Добро пожаловать в Седону!</h1>
+          <img class="intro__title" src="http://placehold.it/150x100" width="150" height="100" alt="Добро пожаловать в Седону!">
+        </section>
+        <section class="reasons">
+          <b class="reasons__slogan">
+            Седона - небольшой городок в Аризоне, заслуживающий большего!
+          </b>
+          <h2 class="reasons__header">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</h2>
+          <div class="reasons__wrapper">
+            <div class="reasons__item reasons__item--white">
+              <h3 class="reasons__title reasons__title--white">Настоящий городок</h3>
+              <p class="reasons__description reasons__description--white">
+                &mdash; №1 &mdash;
+              </p>
+              <p class="reasons__description reasons__description--white">
+                Седона не аттракцион для туристов, там течет своя жизнь
+              </p>
+            </div>
+            <img class="reasons__image" src="http://placehold.it/150x100">
+          </div>
+          <section class="recommendations">
+            <h2 class="visually-hidden">Рекомендации</h2>
+            <div class="recommendations__item">
               <h3 class="recommendations__title recommendations__title--house">Жилье</h3>
               <p class="recommendations__description">
                 Рекомендуем пожить в настоящем мотеле, все как в кино!
               </p>
-            </li>
-            <li class="recommendations__item">
+            </div>
+            <div class="recommendations__item recommendations__item--souvenirs">
               <h3 class="recommendations__title recommendations__title--souvenirs">Сувениры</h3>
               <p class="recommendations__description">
                 Не только китайского, но и местного производства!
               </p>
-            </li>
-            <li class="recommendations__item">
+            </div>
+            <div class="recommendations__item">
               <h3 class="recommendations__title recommendations__title--food">Еда</h3>
               <p class="recommendations__description">
                 Всегда заказывайте фирменный бургер, вы не разочаруетесь!
               </p>
+            </div>
+          </section>
+          <div class="reasons__wrapper reasons__wrapper--reverse">
+            <div class="reasons__item reasons__item--white">
+              <h3 class="reasons__title reasons__title--white">Там есть мост дьявола</h3>
+              <p class="reasons__description reasons__description--white">
+                &mdash; №2 &mdash;
+              </p>
+              <p class="reasons__description reasons__description--white">
+                Да, по нему можно пройти! Если вы осмелитесь, конечно
+              </p>
+            </div>
+            <img class="reasons__image" src="http://placehold.it/150x100">
+          </div>
+          <div class="reasons__wrapper">
+            <div class="reasons__item">
+              <h3 class="reasons__title">Небольшая площадь</h3>
+              <p class="reasons__description">
+                &mdash; №3 &mdash;
+              </p>
+              <p class="reasons__description">
+                Все интересные места находятся очень близко
+              </p>
+            </div>
+            <div class="reasons__item">
+              <h3 class="reasons__title">Красивая дорога</h3>
+              <p class="reasons__description">
+                &mdash; №4 &mdash;
+              </p>
+              <p class="reasons__description">
+                Ехать в Седону из Лас-Вегаса совсем не скучно!
+              </p>
+            </div>
+            <div class="reasons__item">
+              <h3 class="reasons__title">Мало туристов</h3>
+              <p class="reasons__description">
+                &mdash; №5 &mdash;
+              </p>
+              <p class="reasons__description">
+                Большинство едет в Гранд Каньон и толпится там
+              </p>
+            </div>
+          </div>
+        </section>
+        <section class="hotel-search">
+          <h2 class="hotel-search__title">Заинтересовались?</h2>
+          <p class="hotel-search__description">
+            Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне
+          </p>
+          <a class="hotel-search__button button" href="#">Найти гостиницу</a>
+          <div class="hotel-search__map">
+            <img src="img/bg-map-mobile@1x.jpg" width="320" height="350" alt="Карта">
+          </div>
+        </section>
+      </main>
+      <footer class="page-footer">
+        <div class="page-footer__visitsedona">
+          <a class="page-footer__link" href="#">#visitsedona</a>
+        </div>
+        <div class="page-footer__social social">
+          <ul class="social__list">
+            <li class="social__item">
+              <a class="social__link social__link--twitter" href="https://vk.com/htmlacademy">Мы в Твиттере</a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--youtube" href="https://www.instagram.com/htmlacademy">Мы в Ютубе</a>
             </li>
           </ul>
-        </section>
-        <div class="reasons__item reasons__item--bridge">
-          <h3 class="reasons__title">Там есть мост дьявола</h3>
-          <p class="reasons__description">
-            &mdash; №2 &mdash;
-          </p>
-          <p class="reasons__description">
-            Да, по нему можно пройти! Если вы осмелитесь, конечно
-          </p>
         </div>
-        <div class="reasons__wrapper">
-          <div class="reasons__item">
-            <h3 class="reasons__title">Небольшая площадь</h3>
-            <p class="reasons__description">
-              &mdash; №3 &mdash;
-            </p>
-            <p class="reasons__description">
-              Все интересные места находятся очень близко
-            </p>
-          </div>
-          <div class="reasons__item">
-            <h3 class="reasons__title">Красивая дорога</h3>
-            <p class="reasons__description">
-              &mdash; №4 &mdash;
-            </p>
-            <p class="reasons__description">
-              Ехать в Седону из Лас-Вегаса совсем не скучно!
-            </p>
-          </div>
-          <div class="reasons__item">
-            <h3 class="reasons__title">Мало туристов</h3>
-            <p class="reasons__description">
-              &mdash; №5 &mdash;
-            </p>
-            <p class="reasons__description">
-              Большинство едет в Гранд Каньон и толпится там
-            </p>
-          </div>
+        <div class="page-footer__copyright copyright">
+          <p class="copyright__text">Разработано:</p>
+          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
         </div>
-      </section>
-      <section class="hotel-search">
-        <h2 class="hotel-search__title">Заинтересовались?</h2>
-        <p class="hotel-search__description">
-          Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне
-        </p>
-        <a class="hotel-search__button button" href="#">Найти гостиницу</a>
-        <div class="hotel-search__map">
-          <img src="../img/bg-map-mobile@1x.jpg" width="320" height="350" alt="Карта">
-        </div>
-      </section>
-    </main>
-    <footer class="page-footer">
-      <div class="page-footer__visitsedona">
-        <a class="page-footer__link" href="#">#visitsedona</a>
-      </div>
-      <div class="page-footer__social social">
-        <ul class="social__list">
-          <li class="social__item">
-            <a class="social__link social__link--twitter" href="https://vk.com/htmlacademy">Мы в Твиттере</a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--youtube" href="https://www.instagram.com/htmlacademy">Мы в Ютубе</a>
-          </li>
-        </ul>
-      </div>
-      <div class="page-footer__copyright copyright">
-        <p class="copyright__text">Разработано:</p>
-        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
-      </div>
-    </footer>
+      </footer>
+    </div>
   </body>
 </html>
