--- a/photo.html
+++ b/photo.html
@@ -2,151 +2,161 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Фото и видео</title>
-    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-    <header class="page-header">
-      <nav class="page-header__nav">
-        <ul class="site-list">
-          <li class="site-list__item">
-            <a class="site-list__link" href="index.html">Главная</a>
-          </li>
-          <li class="site-list__item site-list__item--active">
-            <a class="site-list__link">Фото и видео</a>
-          </li>
-          <li class="site-list__item">
-            <a class="site-list__link" href="form.html">Форма отзыва</a>
-          </li>
-          <li class="site-list__item">
-            <a class="site-list__link" href="#">HTML Academy</a>
-          </li>
-        </ul>
-      </nav>
-      <div class="page-header__wrapper">
-        <button class="page-header__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-        <a class="page-header__logo" href="index.html">
-          <img class="page-header__logo-image" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Седона">
-        </a>
-      </div>
-    </header>
-    <main class="page-main">
-      <section class="intro intro--mini">
-        <h1 class="visually-hidden">Седона</h1>
-        <img class="intro__title" src="http://placehold.it/150x100" width="150" height="100" alt="Седона">
-      </section>
-      <section class="media">
-        <h2 class="media__title">Фото и видео</h2>
-        <p class="media__description">
-          Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.
-        </p>
-        <article class="photo">
-          <figure class="photo__figure">
-            <img class="photo__image" src="http://placehold.it/150x100" width="150" height="100" alt="Народные просторы">
-            <figcaption class="photo__caption">
-              <p class="photo__name">
-                Софийский собор
-              </p>
-              <p class="photo__author">
-                Автор фото: Борис
-              </p>
-              <p class="photo__likes">
-                <button class="photo__finger" type="button"></button>
-                1350
-              </p>
-            </figcaption>
-          </figure>
-        </article>
-        <article class="photo">
-          <figure class="photo__figure">
-            <img class="photo__image" src="http://placehold.it/150x100" width="150" height="100" alt="Местная растительность">
-            <figcaption class="photo__caption">
-              <p class="photo__name">
-                Местная растительность
-              </p>
-              <p class="photo__author">
-                Автор фото: Сергей
-              </p>
-              <p class="photo__likes">
-                <button class="photo__finger" type="button"></button>
-                143
-              </p>
-            </figcaption>
-          </figure>
-        </article>
-        <article class="photo">
-          <figure class="photo__figure">
-            <img class="photo__image" src="http://placehold.it/150x100" width="150" height="100" alt="Дорога на север">
-            <figcaption class="photo__caption">
-              <p class="photo__name">
-                Дорога на север
-              </p>
-              <p class="photo__author">
-                Автор фото: Петр
-              </p>
-              <p class="photo__likes">
-                <button class="photo__finger" type="button"></button>
-                96
-              </p>
-            </figcaption>
-          </figure>
-        </article>
-        <article class="photo">
-          <figure class="photo__figure">
-            <img class="photo__image" src="http://placehold.it/150x100" width="150" height="100" alt="Мост дьявола">
-            <figcaption class="photo__caption">
-              <p class="photo__name">
-                Мост дьявола
-              </p>
-              <p class="photo__author">
-                Автор фото: Антон
-              </p>
-              <p class="photo__likes">
-                <button class="photo__finger" type="button"></button>
-                254
-              </p>
-            </figcaption>
-          </figure>
-        </article>
-        <div class="video">
-          <h3 class="video__title">Все еще сомневаетесь?</h3>
-          <p class="video__description">
-            Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!
-          </p>
-          <video class="video__file">
-            <source src="" type="">
-          </video>
-          <div class="video__wrapper">
-            <button class="video__toddler" type="button">Ползунок</button>
-            <button class="video__repeat-play" type="button">Повторное воспроизведение</button>
-            <button class="video__subtitles" type="button">Субтитры</button>
-            <button class="video__full-screen" type="button">Полный экран</button>
-          </div>
+    <div class="container">
+      <header class="page-header">
+        <nav class="page-header__nav">
+          <ul class="site-list">
+            <li class="site-list__item">
+              <a class="site-list__link" href="index.html">Главная</a>
+            </li>
+            <li class="site-list__item">
+              <a class="site-list__link site-list__link--active">Фото и видео</a>
+            </li>
+            <li class="site-list__item">
+              <a class="site-list__link" href="form.html">Форма отзыва</a>
+            </li>
+            <li class="site-list__item">
+              <a class="site-list__link" href="#">HTML Academy</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="page-header__wrapper">
+          <button class="page-header__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+          <a class="page-header__logo" href="index.html">
+            <img class="page-header__logo-image" src="http://placehold.it/150x100" width="150" height="100" alt="Седона">
+          </a>
         </div>
-      </section>
-    </main>
-    <footer class="page-footer">
-      <div class="page-footer__visitsedona">
-        <a class="page-footer__link" href="#">#visitsedona</a>
-      </div>
-      <div class="page-footer__social social">
-        <ul class="social__list">
-          <li class="social__item">
-            <a class="social__link social__link--twitter" href="https://vk.com/htmlacademy">Мы в Твиттере</a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--youtube" href="https://www.instagram.com/htmlacademy">Мы в Ютубе</a>
-          </li>
-        </ul>
-      </div>
-      <div class="page-footer__copyright copyright">
-        <p class="copyright__text">Разработано:</p>
-        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
-      </div>
-    </footer>
+      </header>
+      <main class="page-main">
+        <section class="intro intro--mini">
+          <h1 class="visually-hidden">Седона</h1>
+          <img class="intro__title" src="http://placehold.it/150x100" width="150" height="100" alt="Седона">
+        </section>
+        <section class="media">
+          <h2 class="media__title">Фото и видео</h2>
+          <p class="media__description">
+            Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.
+          </p>
+          <article class="photo">
+            <figure class="photo__figure">
+              <img class="photo__image" src="http://placehold.it/150x100" width="150" height="100" alt="Народные просторы">
+              <figcaption class="photo__caption">
+                <div class="photo-wrapper">
+                  <p class="photo__name">
+                    Софийский собор
+                  </p>
+                  <p class="photo__author">
+                    Автор фото: Борис
+                  </p>
+                </div>
+                <p class="photo__likes">
+                  <button class="photo__finger" type="button"></button>
+                  1350
+                </p>
+              </figcaption>
+            </figure>
+          </article>
+          <article class="photo">
+            <figure class="photo__figure">
+              <img class="photo__image" src="http://placehold.it/150x100" width="150" height="100" alt="Местная растительность">
+              <figcaption class="photo__caption">
+                <div class="photo-wrapper">
+                  <p class="photo__name">
+                    Местная растительность
+                  </p>
+                  <p class="photo__author">
+                    Автор фото: Сергей
+                  </p>
+                </div>
+                <p class="photo__likes">
+                  <button class="photo__finger" type="button"></button>
+                  143
+                </p>
+              </figcaption>
+            </figure>
+          </article>
+          <article class="photo">
+            <figure class="photo__figure">
+              <img class="photo__image" src="http://placehold.it/150x100" width="150" height="100" alt="Дорога на север">
+              <figcaption class="photo__caption">
+                <div class="photo-wrapper">
+                  <p class="photo__name">
+                    Дорога на север
+                  </p>
+                  <p class="photo__author">
+                    Автор фото: Петр
+                  </p>
+                </div>
+                <p class="photo__likes">
+                  <button class="photo__finger" type="button"></button>
+                  96
+                </p>
+              </figcaption>
+            </figure>
+          </article>
+          <article class="photo">
+            <figure class="photo__figure">
+              <img class="photo__image" src="http://placehold.it/150x100" width="150" height="100" alt="Мост дьявола">
+              <figcaption class="photo__caption">
+                <div class="photo-wrapper">
+                  <p class="photo__name">
+                    Мост дьявола
+                  </p>
+                  <p class="photo__author">
+                    Автор фото: Антон
+                  </p>
+                </div>
+                <p class="photo__likes">
+                  <button class="photo__finger" type="button"></button>
+                  254
+                </p>
+              </figcaption>
+            </figure>
+          </article>
+          <div class="video">
+            <h3 class="video__title">Все еще сомневаетесь?</h3>
+            <p class="video__description">
+              Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!
+            </p>
+            <video class="video__file">
+              <source src="" type="">
+            </video>
+            <div class="video__wrapper">
+              <button class="video__toddler" type="button">Ползунок</button>
+              <button class="video__repeat-play" type="button">Повторное воспроизведение</button>
+              <button class="video__subtitles" type="button">Субтитры</button>
+              <button class="video__full-screen" type="button">Полный экран</button>
+            </div>
+          </div>
+        </section>
+      </main>
+      <footer class="page-footer">
+        <div class="page-footer__visitsedona">
+          <a class="page-footer__link" href="#">#visitsedona</a>
+        </div>
+        <div class="page-footer__social social">
+          <ul class="social__list">
+            <li class="social__item">
+              <a class="social__link social__link--twitter" href="https://vk.com/htmlacademy">Мы в Твиттере</a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--youtube" href="https://www.instagram.com/htmlacademy">Мы в Ютубе</a>
+            </li>
+          </ul>
+        </div>
+        <div class="page-footer__copyright copyright">
+          <p class="copyright__text">Разработано:</p>
+          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+        </div>
+      </footer>
+    </div>
   </body>
 </html>
